# DistStore

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  client.cpp  gthash.cpp  helper.cpp  manager.cpp  run.sh  storage.cpp  test_app.cpp  throughput.sh
src/include/: gtnode.hpp  gtstore.hpp
src/proto/: demo.proto
